<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--  Card 1 : Create Alarm  -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card1_set_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    style="?attr/materialCardViewElevatedStyle"
                    app:cardElevation="5dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/card1_img"
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/alarm"
                            android:contentDescription="@string/my_image_description"/>
                        <TextView
                            android:id="@+id/card1_title_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:text="@string/create_time"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/card1_img"/>
                        <TextView
                            android:id="@+id/card1_body_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/text1"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintStart_toStartOf="@id/card1_title_text"
                            app:layout_constraintTop_toBottomOf="@id/card1_title_text"/>
                        <TextView
                            android:id="@+id/card1_body_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/text2"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:textColor="?android:attr/textColorSecondary"
                            app:layout_constraintStart_toStartOf="@id/card1_body_text"
                            app:layout_constraintTop_toBottomOf="@id/card1_body_text"/>
                        <TextClock
                            android:id="@+id/card1_text_clock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:format12Hour="hh:mm:ss a MMM,dd yyyy"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/card1_body_text2"/>
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_create_alarm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/alarm_button"
                            app:icon="@drawable/alarm_add_24px"
                            app:layout_constraintStart_toStartOf="@id/card1_title_text"
                            app:layout_constraintTop_toBottomOf="@id/card1_text_clock"
                            tools:ignore="TextContrastCheck"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
                <!--  Card 2 : Cancel Alarm  -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card2_cancel_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@id/card1_set_alarm"
                    style="?attr/materialCardViewElevatedStyle"
                    app:cardElevation="5dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/card2_img"
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/alarm"
                            android:contentDescription="@string/my_image_description"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:id="@+id/textAlarmTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/set_time"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/card2_img"/>
                        <TextView
                            android:id="@+id/card2_text_clock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set_time"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textAlarmTime"/>
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_cancel_alarm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/cancel"
                            app:icon="@drawable/alarm_off_24px"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/card2_text_clock"
                            tools:ignore="TextContrastCheck"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>